Move old doc contents

--- a/src/website/27th.md
+++ b/src/website/27th.md
@@ -1,1 +1,135 @@
 # 關於一三社網那檔事
+
+> 原始碼：有兩個地方，因為一四重架了之後 AaW 不知道要怎麼管理 Github Repository 比較好<br>
+>
+> - 原本的： <https://github.com/CKEFGISC/CKEFGISC.github.io><br>
+> - Fork 出來的：<https://github.com/CKEFGISC/27th-website><br>
+>
+> 網站：<https://27th.ckefgisc.org/>
+
+## 部署
+
+使用 Github Pages 部署。
+![](https://hackmd.io/_uploads/H1F6jSzY2.png)
+Branch 那邊可以更改部署的 branch (develop 或 main)
+而 custom domain 那邊則是更改網站網域名稱，設定完之後，要將 DNS record 指過去，詳情可以看這篇[文章](https://docs.github.com/en/pages/configuring-a-custom-domain-for-your-github-pages-site/about-custom-domains-and-github-pages)。
+
+在 [action](https://github.com/CKEFGISC/CKEFGISC.github.io/actions) 標籤頁可以看到部署現況。
+![](https://hackmd.io/_uploads/rJqdhSzF3.png)
+
+## 檔案結構
+
+- `styles`下面有 header 跟 footer 的 CSS，以及全體共用的`global.css`。
+- `common`下面有 header、footer 以及共用的 CSS links CSS links 除了有 styles 裡面需要共用的 CSS，還有外部的 CSS，包括字體跟 Font Awesome 等
+- `scripts`下面的`include.js`用來把`common`裡面的 HTML 都加進頁面裡，
+- 因為用了 jQuery，所以要用時請在`<head>`裡面加上這兩行：
+
+```html
+<script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+<script src="/scripts/include.js"></script>
+```
+
+並將`<body>`如下安排：
+
+```html
+<body>
+  <header></header>
+  <div id="main-container">
+    <!--你自己的code-->
+  </div>
+  <footer></footer>
+</body>
+```
+
+## 公告系統
+
+以`.txt`檔撰寫公告，存放於`/news/posts`底下
+
+### 檔案格式
+
+- 第一行為日期`YYYY-MM-DD` <br>
+- 第二行為標題 <br>
+- 第三行及以下為公告內容 <br>
+- 範例如下：
+
+```bash=
+2022-12-25
+[測試]公告系統測試
+本公告乃為測試公告系統是否正常運作
+以及提供做為演示用途的範例
+```
+
+### HTML 生成
+
+使用`gennews.sh`來生成 HTML 網頁：
+
+```
+./gennews.sh test
+```
+
+注意參數僅為其「檔名」，而不包含完整路徑或副檔名
+
+## 給蔡政廷寫東西的地方
+
+網管跟有參與管理的學術
+除了知道怎麼用之外
+還要完全搞懂一些 script 的運作原理
+然後之後如果我們社團有幸取得自己的伺服器
+可以考慮加入後端
+
+## 給蘇怡恩寫東西的地方
+
+基本上我希望你們重新弄一個你們的社網，把我們的完整保留丟到歷屆區
+
+#### 你們的社網有兩個選項
+
+1. 直接複製程式碼改 HTML 內容就好
+
+- 優點：
+  - ~~你們可以懶惰~~
+  - 風格一致
+  - **基本上**沒有太多 bug
+- 缺點：
+  - 比較沒有一屆一屆的感覺
+  - ~~你們可能嫌我寫得太爛~~
+  - 因為我是完全手刻，而且可能有一堆亂嘗試的東西、一堆奇奇怪怪的變數名，如果你們要改可能比較麻煩 ~~，但我相信你們那麼電一定看的懂~~
+
+2. 自己重新搞一個你們喜歡的社網
+
+- 優點：
+  - 每屆都有每屆的特色
+  - 可以跟我們的架構完全不一樣
+- 缺點：
+  - ~~會跟我一樣爆肝，不過你們可能不會，因為你們是網管+不會卡的小卡~~
+  - 以後的每屆可能都要做一個新版的社網
+
+#### if 你們要重弄一個社網，我的微不足道的建議
+
+- 可以用 bootstrap，但不要用現成的完整程式碼
+- 基本上我個人覺得社史、幹介、課程那些是蠻重要的，但如果你們有甚麼其他想法可以再討論
+
+#### 其他小建議
+
+- 活動要放的話要逼著執秘趕快生出東西，不然會像我們一樣沒有活動
+- 課程簡報盡量就公布出來
+- 一定要做對手機使用者友善的網頁
+- 內容提前討論好(應該是學術會議)，是時候展現你們催東西的藝術了
+- 做任何更改前要先跟其他網管討論過
+- 弄一個社網的群啦，可以加我們
+- 弄好社網可以丟 FB 建北電資社團宣傳
+
+## 給吳亞倫寫建議的地方
+
+關於歷屆的部分，我這邊有兩種想法，給學弟妹參考：
+
+1. 跟蘇怡恩講的一樣，把整個網站完整備份到一個類似 27th.ckefgisc.org 的另外一個網站去
+2. 每個分頁都有一個歷屆按鈕
+
+## 一三未完成的東西 aka 學弟妹你們可以幫我們做的事
+
+- slides.com 在手機版頁面時嵌入式窗會太小 (絕對不是因為我懶)
+- linktree 還沒有 RWD (絕對不是因為我懶)
+- 演算法頁面沒有放入上機考排行榜
+- 放歷屆 aka 一三資料的地方
+- 一堆活動沒內容(不過就不用理一三的了，你們做好你們的就好)
+- `og:image`
